--- a/factorial.html
+++ b/factorial.html
@@ -7,7 +7,7 @@
 
 <div ng-app="myApp" ng-controller="myCtrl">
 
-<h1>Input a number for calculating its factorial!</h1>
+<h1>Input a number for calculating its factorial</h1>
 <input type="number" placeholder="Your number goes here..." ng-model="n">
 <h2>The factorial is {{fact(n)}}</h2>
 
