Add page <title>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Calculate Factorial</title>
+</head>
 <body>
 <div id="app">
     <h1>Input a number for calculating its factorial</h1>
